<resources>
    <string name="app_name">Galaga</string>
    <string name="start">Start</string>
    <string name="options">Options</string>
    <string name="quit">Quit</string>
    <string name="backToMenu">Back to Main Menu</string>
    <string name="enablesound">Enable Sound</string>
    <string name="paused">Paused</string>
    <string name="resume">Resume</string>
    <string name="volume">Volume:</string>


    <string name="endStateWin">You Win!</string>
    <string name="endStateLose">You Lose!</string>
    <string name="wavesCompleted">Waves Completed: %1$d</string>
    <string name="enemiesKilled">Enemies Killed: %1$d</string>
</resources>
